# doublets-server-prototype

./: Cargo.toml
src/: main.rs
src/model/: mod.rs
src/model/enum_type/: bool_exp_constraint.rs  bool_exp_update_column.rs  links_constraint.rs  links_update_column.rs  mod.rs  mp_constraint.rs  mp_update_column.rs  number_constraint.rs  number_update_column.rs  order_by.rs  string_constraint.rs  string_update_column.rs
src/model/input_object_type/: bigint_comparison_exp.rs  bool_exp_aggregate_order_by.rs  bool_exp_arr_rel_insert_input.rs  bool_exp_avg_order_by.rs  bool_exp_bool_exp.rs  bool_exp_inc_input.rs  bool_exp_insert_input.rs  bool_exp_max_order_by.rs  bool_exp_min_order_by.rs  bool_exp_obj_rel_insert_input.rs  bool_exp_on_conflict.rs  bool_exp_order_by.rs  bool_exp_pk_columns_input.rs  bool_exp_set_input.rs  bool_exp_stddev_order_by.rs  bool_exp_stddev_pop_order_by.rs  bool_exp_stddev_samp_order_by.rs  bool_exp_sum_order_by.rs  bool_exp_var_pop_order_by.rs  bool_exp_var_samp_order_by.rs  bool_exp_variance_order_by.rs  float8_comparison_exp.rs  j_w_t_input.rs  links_aggregate_order_by.rs  links_arr_rel_insert_input.rs  links_avg_order_by.rs  links_bool_exp.rs  links_inc_input.rs  links_insert_input.rs  links_max_order_by.rs  links_min_order_by.rs  links_obj_rel_insert_input.rs  links_on_conflict.rs  links_order_by.rs  links_pk_columns_input.rs  links_set_input.rs  links_stddev_order_by.rs  links_stddev_pop_order_by.rs  links_stddev_samp_order_by.rs  links_sum_order_by.rs  (+65 more)
src/model/object_type/: bool_exp.rs  bool_exp_aggregate.rs  bool_exp_aggregate_fields.rs  (+73 more)
(+4 files in other folders)
