[package]
name = "doublets-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.11.0"
async-graphql = "4.0.0"
async-graphql-actix-web = "4.0.0"
actix-web = "4.0.1"
tokio = { version = "1.18.2", features = ["full"] }

doublets = { path = "F:/LinksPlatform/Data.Doublets/rust/doublets", features = ["full"] }
